--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -94,6 +94,30 @@
 		<p>See you next time!</p>
 
 	</div>
+
+	<div *ngSwitchCase="4">
+
+		<p>Hello!  My bad for not writing for so long.  I'm plugging away at coding.  It's hard to write blog posts about development, and takes up time that I could be spending actually making things, which is the highest priority for me.  I will write more about dev eventually... for now I wanted to take the blog in a more "traditional" direction, for a blog anyway.</p>
+
+		<p>As you can probably tell by my one sentence About Me post, I haven't been super keen on writing about myself.  Which makes things interesting since this is a BLOG and that's kinda what seems to be expected.  I've changed a ton in the past half year.  Now I don't feel the need or the desire to share so much.  I've changed so much that it has been hard to figure out what I really want to talk about now.  But I finally came up with an idea the other day that I love.  I want to talk about people from my past, and my present, that I deeply appreciate, and why.  Going to call it the "open letter of appreciation" series.</p>
+
+		<p>I'm going to make up names for people that I put on here.  I just want to respect their privacy.  They'd definitely know who they are from reading the stories</p>
+
+		<h2>Joe, the calmest guy at Northrop Grumman</h2>
+
+		<p>We're going to call this first guy Joe.  Joe was my coworker at Northrop Grumman, in Rolling Meadows Illinois, when I first started my career and was still doing RF engineering.  We worked together for about 2 and a half years... man I can't believe it was that long, it seems really short in retrospect.</p>
+
+		<p>Joe is probably the calmest person I have ever met in my life.  No matter what happened, no matter if someone was freaking out or something didn't go right, Joe was just like, eh oh well, everything will probably work out.  It was flipping amazing.  NGC had a parts ordering system where, if you needed to buy a $5 pack of resistors, you had to order it on this archaic DOS look-alike system, and it would literally take a minimum of 6 months to arrive.  By the time you got them you couldn't remember why you ordered them.  I'd come over to his desk and be like WTFOMGBBQ PARTS JOE!!!!  And he would just calmly place the order for me while I finished freaking out.</p>
+
+		<p>On top of that, Joe was extremely patient.  I'd go over to his cubicle and ask him a million questions about how things worked (he designed the stuff I was working on and was very smart) and he would sit there and answer every one of them.  I was like, 22, 23 years old and even I realized after a couple hours of questioning that, holy cow Marla this is getting ridiculous, but he was still there answering those silly questions for me!</p>
+
+		<p>The thing that I admired the most about Joe is how he treated me, and everyone else, with respect.  No matter if you were some 22 year old newbie like me asking you questions for 2 hours straight (probably on a Monday), or if you were the head honcho, if you asked for Joe's time and attention, you got it.</p>
+
+		<p>Something he did that makes me so happy to think about, even now, is when I quit, he threw a huge surprise "goodbye" party for me.  I had no idea about it and I went into this room and there were 30 people in there, and pizza, and they even had a slideshow about the "top 10 Marla moments!"  That was so amazing.</p>
+
+		<p>At the time I took him for granted.  I thought every job would have a Joe in it.  I'm so appreciative that I got to work with him.  I hope things are going better than ever in his life.</p>
+
+	</div>
 	
 </div>
 
