--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -99,9 +99,9 @@
 
 		<p>Hello!  My bad for not writing for so long.  I'm plugging away at coding.  It's hard to write blog posts about development, and takes up time that I could be spending actually making things, which is the highest priority for me.  I will write more about dev eventually... for now I wanted to take the blog in a more "traditional" direction, for a blog anyway.</p>
 
-		<p>As you can probably tell by my one sentence About Me post, I haven't been super keen on writing about myself.  Which makes things interesting since this is a BLOG and that's kinda what seems to be expected.  I've changed a ton in the past half year.  Now I don't feel the need or the desire to share so much.  I've changed so much that it has been hard to figure out what I really want to talk about now.  But I finally came up with an idea the other day that I love.  I want to talk about people from my past, and my present, that I deeply appreciate, and why.  Going to call it the "open letter of appreciation" series.</p>
+		<p>As you can probably tell by my one sentence About Me post, I haven't been super keen on writing about myself.  Which makes things interesting since this is a BLOG and that's kinda what seems to be expected.  I've changed a ton in the past half year.  I've changed so much that it has been hard to figure out what I really want to talk about now.  But I finally came up with an idea the other day that I love.  I want to talk about people from my past, and my present, that I deeply appreciate, and why.  Going to call it the "open letter of appreciation" series.</p>
 
-		<p>I'm going to make up names for people that I put on here.  I just want to respect their privacy.  They'd definitely know who they are from reading the stories</p>
+		<p>I'm going to make up names for people that I put on here.  I just want to respect their privacy.  They'd definitely know who they are from reading these stories.</p>
 
 		<h2>Joe, the calmest guy at Northrop Grumman</h2>
 
