--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -118,6 +118,24 @@
 		<p>At the time I took him for granted.  I thought every job would have a Joe in it.  I'm so appreciative that I got to work with him.  I hope things are going better than ever in his life.</p>
 
 	</div>
+
+	<div *ngSwitchCase="5">
+
+		<p>Hi.  I haven't shared about what I'm trying to do here yet.  I left my job on July 1st 2017 to become a software developer.  So it's been about 8 months.  I chose to do it on my own, rather than go to code school or go back to college.  The reason was because I've got a degree in electrical engineering and already put in 5 grueling years in college to become someone who can learn difficult things on her own.  I've done my time.</p>
+
+		<p>What I want to talk about, and have wanted to talk about for a while, is what I call the "mental game" of this.  Learning to code has been fun, not "easy" but not so challenging that it has been overwhelming.  That's not what I'm talking about here.  What I think of as the "mental game" is learning how to believe in myself when nobody else does.  And, lemmetellya, NOBODY ELSE believes in me right now.</p>
+
+		<p>I won't go into specifics, because this ain't no sob story.  Just think of it as, every time I reach out to someone who knows me, and knows what I'm doing and why I'm doing it, their response is disappointing.  There is the subtle implication "you're never going to make it" in these interactions.  The only exceptions have been people in my family.</p>
+
+		<p>I'm not going to put a happy-face sticker on this and say that it doesn't bother me at all.  It does.  Every single time.  Sometimes I pretend like it doesn't bother me, but I feel sad and then I have to figure out, oh yeah, it did, and go back and unpack it.  This is probably going to keep happening.</p>
+
+		<p>How I handle this now compared to how I've handled it in the past is different.  I'm done with trying to get other people to understand me.  I'm done with trying to prove to them that I'm actually really smart and can do this.  These people will likely never care to understand.  I'm not going to waste my time talking until I'm blue in the face trying to change their minds when they're already made up.  There are many other things I'd rather do.</p>
+
+		<p>The other thing that is different is that I know they are wrong.  They're wrong!  I don't have the job yet.  But here's what they don't know.  I will not stop until I'm a working developer.  When I get hold of something I want, I'm like a dog with a bone.  It could take me 10 years to earn a paycheck!  Or maybe we'll have to move to Hong Kong to find me a job.  I just don't care!  I'll do what I have to do to keep doing this forever.  I love coding and learning new things and making stuff.  I love what I'm doing now.</p>
+
+		<p>In a way, I'm thankful for all those who don't believe in me.  I'm glad to know what they really think.  I'd rather know the truth than some souped-up version of it.  It has forced me into finding my own belief in myself.  And I'm finding that that is more valuable to me than 10,000 yes-people telling me I'm awesome.</p>
+
+	</div>
 	
 </div>
 
