--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -118,6 +118,34 @@
 		<p>At the time I took him for granted.  I thought every job would have a Joe in it.  I'm so appreciative that I got to work with him.  I hope things are going better than ever in his life.</p>
 
 	</div>
+
+	<div *ngSwitchCase="5">
+
+		<p>You may have noticed that I wrote a post last week, left it up for a day, and then "deleted" it (I say that in parenthesis because, it's never really deleted... you can go view it in the reverted changes on Github if you really want).  I wrote it, put it up, and it just didn't feel good to me.  So I took it down.  Thus is life.  Part of the post was about feeling that other people don't believe in me.  The truth is, I don't know for sure that they don't.  But, it doesn't MATTER to me anymore what they think.  That's really what I was trying to get at.  But I felt the point got obscured.  And I just really don't feel like opening that can of worms again.  I believe in myself now.  Yay.  Let's move on.</p>
+
+		<p>Now I got a post entirely about me and how I learn.  I've been thinking about this topic a lot lately.  The way I learn is probably not so different from the way others do.  But I think over the years, because I was listening to other people's opinions on how one "should" learn things best, when I heard something different from how I do it, I labeled my way the "wrong" way and tried to do it the "right" way.  Now I see it as, there's no wrong or right way to learn things, there's just "your" way.</p>
+
+		<p>As I mentioned in the post that was """deleted""", I've been learning how to be a software developer for the past 8 months.  I had a couple options for how to go about becoming a developer.  One was to go back to college, and the other was to go to a code bootcamp.  I have a bachelors in electrical engineering, that I obtained from a top 3 engineering school while playing golf on scholarship.  Oh and a math minor.  So yeah, after that grueling experience, more college did not sound appealing, or honestly, necessary (I'm already an engineer, yo).  I was seriously considering going to code school.  In fact I thought that was what I was doing until about a month before I started this.  But, then the idea came up that, maybe I could do this on my own... and that felt way better than any of the other options.</p>
+
+		<p>When I was like, 11 or 12, we had a computer at home.  It eventually got moved up to my room.  I had heard about this thing called the "internet" where you could talk to people through the computer.  I heard that it worked through the phone lines.  I had a phone line in my room that wasn't hooked up to anything.  So... I recall spending a day tinkering and trying everything I could to get that computer somehow hooked up to the internet.  I found a rubber hose, and jerry-rigged something to go from the phone line to the computer.  There was a settings application on my computer that said something about internet on it and I tried typing all kinds of stuff to try to connect.  Unfortunately, after 3 or so hours of tinkering, nothing worked and I gave up.</p>
+
+		<p>That's how I roll when it comes to learning or, anything really.  I throw out the instruction manual, and just try crap until something works.  In school and in college, I noted that classes themselves really didn't help me learn that much.  I went to them, because I always worried if I didn't go I would miss something.  But the real thing that helped me learn was trying to do the math or engineering problem myself, looking at the answer in the back of the book, and if I didn't get it right, trying things until I did.  That was really the only thing that worked for me.</p>
+
+		<p>I've heard a lot that other people swear by working with other people, or working in groups.  I'd study in the library in college and there would be tables of 20 people working together.  That's great for you, other people.  I wish so hard that I could do that.  But other people and their weird thoughts about how to solve the problem at hand distract me.  I'd rather struggle through it on my own.</p>
+
+		<p>Another "weird" thing about me and how I learn and just, do... things... in the world?, is that I like to just visualize the outcome and then when I'm ready, take steps toward it.</p>
+
+		<p>When I was in college, I played on the women's golf team.  There was a assistant coach on our team who was really into studying the course, and writing down every little detail in her yardage book, during the practice round before the tournament.  She said she would hit a ball to each side of the fairway on her drive, then hit 2-3 balls toward the green, study how the green sloped, study how the wind was blowing... basically study every dang thing on every hole of the course and write it in that book.  Probably no surprise this coach is now a lawyer.</p>
+
+		<p>Anyway, this approach sounded very appealing to me.  There was a kind of "it's all planned out for me" orderly feeling to it.  So, there was a tournament where we had to play 36 holes in a day, and I decided to try her approach out.  The first 18 holes, I used that yardage book, I studied and analyzed every shot, and I used the club the yardage book and my brain said to use.  Shot a 78, which is not bad.  But following that yardage book was pretty tiring.  I decided to go back to my old way of doing it for the second round.  My "old way" consisted of, looking at the fairway, visualizing where I wanted my shot to go, and then hitting it that way.  Then when I would walk up to the next shot, I'd be thinking about how I wanted that shot to go... and so on.  On the second round, I shot a 75.  From that day forward, I ditched the "yardage book" idea and just kept on working the same way that had worked for me all those years before.</p>
+
+		<p>I still get caught up trying to over-analyze my way through things.  It seems like fun.  And it obviously works for some times of people - see example high-powered lawyer/former assistant coach above.  Those types of people seem like they've got it together.  But... I'm just not like that.  Planning, for me, obscures the real work of just, doing the thing.</p>
+
+		<p>It gets weird when it comes to learning to code.  You gotta learn the language, obviously, and that involves going through tutorials and "analyzing," which to me feels like the golf coach writing things down in her book, but it's necessary.  But then, after a while, I needed to just put the Angular Docs webpage down, and just code something.  It's a fine line between analyzing and doing.</p>
+
+		<p>Well, that's all I've got for today.  Later!</p>
+
+	</div>
 	
 </div>
 
