--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -168,6 +168,18 @@
 		<p>Well, that's all I got... now I'm going to go try this!  Later!</p>
 
 	</div>
+
+	<div *ngSwitchCase="7">
+
+		<p>You've likely noticed that the domain of this site switches from marlaforeman.com to marla294.github.io/blog when you navigate to it.  That's because my DNS provider is set up right now to use website forwarding.</p>
+
+		<p>I have really wanted to fix this for a long, long time.  I know it doesn't look profesh.  I just haven't known how to fix it.  And the DNS provider I used, bless their hearts, their customer service reps don't know either.  I've gone into the ring with them a couple times and after the last round I just gave up for a little while.</p>
+
+		<p>So, thanks to urging from my brother (also a developer), I'm going to go and try again to fix this myself.  Wish me luck.  It might go down for a day or two while things propagate over, I don't know.  Or I might screw it up forever.  In that case, it's been nice knowing you.</p>
+
+	</div>
+
+	</div>
 	
 </div>
 
