Update to post 7

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -177,6 +177,8 @@
 
 		<p>So, thanks to urging from my brother (also a developer), I'm going to go and try again to fix this myself.  Wish me luck.  It might go down for a day or two while things propagate over, I don't know.  Or I might screw it up forever.  In that case, it's been nice knowing you.</p>
 
+		<p>Update: Obviously, got it working with the right domain name!  Big thanks to my brother for helping me sort through all that CNAME/A record stuff.</p>
+
 	</div>
 
 	</div>
