--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -181,6 +181,18 @@
 
 	</div>
 
+	<div *ngSwitchCase="8"> 
+
+		<p>Hello!  It's pretty obvious that I haven't had a post on here for a while.  There's a reason for that.  I've been working on a project, that, for various reasons, I haven't wanted to share about online.  It is almost done now, so when it's ready (and I'm ready) I will probably put it up on Twitter.</p>
+
+		<p>So, now that that project is almost complete, today I decided to totally switch gears and learn ReactJS.  I can't give you an exact reason why I want to learn React.  I've just wanted to learn it for a while.  And, YOLO, so... I ponied up for the Wes Bos "React for Beginners" course.  It feels a little like cheating to be talking about learning React on my blog which is written in Angular... but here we are.  Deal with it, Angular.</p>
+
+		<p>I haven't gone through the whole course yet but I can already see a few differences between React and Angular.  The major thing I see (and maybe this is why I wanted to learn it) is that, React just feels more fun!  I like that you put everything in components, and that there are states that hook up to the components and you can change the state throughout the app.  Angular is more acedemic and strict.  They're both good for their own purposes.  I'm extremely glad that I learned and worked in Angular first, so that I could learn a few extra libraries that they kinda force you to use (RxJS, I'm looking at you).  The Angular docs taught me so much about software development and coding, and I am super appreciative of them still.</p>
+
+		<p>That's all I've got for today!</p>
+
+	</div>
+
 	</div>
 	
 </div>
