--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -191,6 +191,51 @@
 
 	</div>
 
+	<div *ngSwitchCase="9">
+
+		<p>Hello!  If you follow me on social media, you probably saw that yesterday I decided to take a social media break for a month to focus on preparing for interviewing.  Sorry for the whiplash that likely caused you to have if you follow my social media.  I finished making the decision yesterday that I want to start interviewing for dev jobs, and now the next step is to strategize how to go about this.  So I figured, hey, let's share it with the internet!  Why not.  Well, actually, at some point I might take this post down, because this blog is a project that I'll be sharing on my portfolio, and maybe it's not such a good idea to give away my strategy with everyone when I am actually interviewing!  We'll see how I feel when I get to that point... but for now, it's fine.  (And, don't worry, I now know how to delete commits on Github too ;))</p>
+
+		<p>So first, let's start by talking high level.</p>
+
+		<h2>Why I want a job now</h2>
+
+		<p>One of the biggest reasons is that I really love working with other people on software projects, and I miss that.  I really like collaborating with others and learning from them and being inspired by them.  Some of the biggest influences in my life have come from work.</p>
+
+		<p>Another reason is that it is darn hard to come up with ideas and to create an entire software package entirely on your own, especially when you are new.  It is slow going.  Everything is brand new and breaks constantly.  At a company, you can focus on one part of it and get really good at that.  I like learning the new stuff, and working on my own, but man, I could use a little break to just focus on getting better at coding.</p>
+
+		<p>Finally, I just really want to get good at development.  I haven't had many code reviews over here.  In a way it has been good to have to struggle and figure it out on my own.  It has given me the confidence that I can actually do this, even if I have to go it alone.  But, I'm ready to see how I can improve things and level up my skills.  Working with other people who are more experienced and getting their feedback would help.</p>
+
+		<h2>Why it's okay if I don't get a job right away</h2>
+
+		<p>Have to add this part in for myself, because I don't want to put so much pressure on myself that I get paralyzed and can't make progress.</p>
+
+		<p>I am lucky in that my husband and I are doing well enough financially that I can continue to not make money for a while longer.</p>
+
+		<p>Also, if it happens that I just can't seem to find a job at all, I will keep leveling up my skills on my own until something comes along - I have a list a mile long of things I want to learn and classes to take.  So I'll keep doing that and practicing interviewing until I break through.  There are also other avenues that I could try... freelancing, trying self-employment, etc.  The main thing is not to give up.</p>
+
+		<h2>What kind of job do I want?</h2>
+
+		<p>I want a front-end dev position to start.  That is what I've worked toward and have really enjoyed.  It does seem like server-side could be fun for me too.  But to get my foot in the door, front-end is what I'm going for right now.</p>
+
+		<h2>Strategy</h2>
+
+		<p>I've set a goal for myself that I want to feel ready to at least try a technical interview in 3 weeks.  That might be aggressive, but I really want this.  So here are the things that I am going to need to do to prepare.</p>
+
+		<ol>
+			<li><b>Finish my resume: </b>Why is this so hard?  Beats me.  But obvs, still gotta do it.</li>
+			<li><b>Create React single-page app: </b>I just finished Wes Bos' React course at warp speed in 2.5 days.  I gotta solidify that new knowledge by making a small app in React.</li>
+			<li><b>Polish Chesskers: </b>Otherwise known as Chess in my Github repos.  This poor thing suffers from lack of frontend attention to detail.  I want to give it some love.</li>
+			<li><b>Prepare for Interviewing: </b>This could be a list in itself, and should hopefully take up 80% of the next 3 weeks.  I'll be following this <a href="https://medium.freecodecamp.org/cracking-the-front-end-interview-9a34cd46237" style="text-decoration: underline">guide</a>.</li>
+		</ol>
+
+		<p>I'm planning to pull out all the stops to get this done.  That's why no more social media.  I made a tweet on twitter a week ago that randomly got 4000 impressions, and that was super fun to watch, and it hooked me back in.  At the end of the day though, are good tweets or instagram pictures going to get me a job?  No.  No, they are not.  It seems that I can't do things in moderation, it's either all in or nothing at all.  So I have to take a break from those while I work on this.</p>
+
+		<h2>Wrapping up</h2>
+
+		<p>I do want to say that, it sucks that I have to basically put the skids on learning new, practical things like I have been doing in order to "study" for an interview.  Seems like the process is a little broken there.  But, what are you gonna do.  I guess it's like a weed out course in college where you have to show that you do have the smarts and the drive to go the rest of the way.  In any case, challenge accepted.</p>
+
+	</div>
+
 	</div>
 	
 </div>
