Update to Post 9

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -226,6 +226,7 @@
 			<li><b>Create React single-page app: </b>I just finished Wes Bos' React course at warp speed in 2.5 days.  I gotta solidify that new knowledge by making a small app in React.</li>
 			<li><b>Polish Chesskers: </b>Otherwise known as Chess in my Github repos.  This poor thing suffers from lack of frontend attention to detail.  I want to give it some love.</li>
 			<li><b>Prepare for Interviewing: </b>This could be a list in itself, and should hopefully take up 80% of the next 3 weeks.  I'll be following this <a href="https://medium.freecodecamp.org/cracking-the-front-end-interview-9a34cd46237" style="text-decoration: underline">guide</a>.</li>
+			<li>(Update)<b>Prepare for the Whiteboard Problems of Doom: </b>Ok, for me, perhaps this is a bit overkill... but overkill is my middle name.  My brother suggested I go through <a href="https://leetcode.com/problemset/algorithms/" style="text-decoration: underline">this</a> until I can do the mediums with minimal difficulty.  I'll do my best, bro.</li>
 		</ol>
 
 		<p>I'm planning to pull out all the stops to get this done.  That's why no more social media.  I made a tweet on twitter a week ago that randomly got 4000 impressions, and that was super fun to watch, and it hooked me back in.  At the end of the day though, are good tweets or instagram pictures going to get me a job?  No.  No, they are not.  It seems that I can't do things in moderation, it's either all in or nothing at all.  So I have to take a break from those while I work on this.</p>
