--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -277,6 +277,44 @@
 
 	</div>
 
+	<div *ngSwitchCase="11">
+
+		<p>Yes, you heard me right!  For a couple of reasons, I decided to not import Bootstrap for that React project I've been working on, my portfolio site.  Initially, I did try importing it, but the Bootstrap Sass in the project was overwriting all of my internal styles and I was spending too much time getting that sorted out.  And also, since I've been learning more with the intention of starting a job search soon, there were a few things I wanted to practice in vanilla CSS anyway.</p>
+
+		<p>At first I was like, uggh... this is not going to be fun.  Bootstrap makes everything look pretty and you can just stick classes on elements to quickly pop in a style.  And CSS can be confusing to work with in frameworks, as your files can be separated out among different components.</p>
+
+		<p>But once I really got into it, I enjoyed it quite a lot!  And in fact, I might just write my own CSS for projects going forward, because it's fun and because I believe it will help me be a better front end developer in the future.  Here are some of the main things I learned from this process and why I'm excited about writing CSS this way now.</p>
+
+		<h2>Best practices</h2>
+
+		<p>The main reason I got into using plain old CSS was because I learned about some best practices of writing CSS through my studies to ace interviews.  Object-Oriented CSS, BEM, CSS pre-processors, etc.  I'm naturally drawn to efficiency and making things smaller, simpler and easier to use.  Learning about this stuff made me want to implement these practices to see if I could write better CSS.</p>
+
+		<h2>CSS built-in features</h2>
+
+		<p>The latest version of CSS (CSS3) has a lot of built-in features that older versions of CSS didn't have.  One that I used all the flippin time is flexbox.  Flexbox is amazing.  I am probably just scratching the surface of ways it can be used (I just use it to center stuff mostly) but I still love it.</p>
+
+		<p>Another thing you can do (that I haven't used much yet) is use variables.  I'm not sure why I haven't done it yet... maybe I'll go back and refactor CSS and try them out.</p>
+
+		<h2>Dev tools!</h2>
+
+		<p>This was probably the thing that I had the most fun with on the portfolio project, and what made Bootstrap fall flat this time.  You can go into dev tools and switch on and off the styles for each class or element, or manually edit the values and see what happens!  You can even add styles in.  So, this time, the process I took was to just write the CSS and get the project looking as good as I could, and after I got it looking pretty good I went into dev tools and turned on and off styles to see what happened.  I was able to eliminate a lot of attributes that weren't really doing anything, and see how I could consolidate the CSS more to make the same things happen with less.  Super fun!</p>
+
+		<h2>Emmet</h2>
+
+		<p>I just recently learned about Emmet, and so I didn't get to use it on this project, but I can't wait to try it!  Emmet is a plugin that makes writing HTML and CSS super easy.  For a simple example with HTML, say you want to make a paragraph tag.  You just type "p" and then the tab key, and Emmet replaces the p with a full HTML paragraph tag!  You can add classes, ids, nest tags... you could write a full HTML document just using Emmet and click tab to populate it all out!  It is super cool.  You can even use it with JSX, which is going to be SO SUPER HELPFUL because right now Sublime doesn't populate the HTML tags for me in js files.  Just gotta click ctrl+e to get it to populate instead of tab.</p>
+
+		<p>You can also use Emmet with CSS properties.  Emmet uses "fuzzy search," so you just type what you think the abbreviation might be in the CSS selector and then hit the tab key, and it'll populate!  Like if I wanted to do margin-bottom, I'd try mb and then tab and see if it came up.  The fuzzy search is supposed to be pretty good so around 90% of the time you'll get what you were searching for.</p>
+
+		<h2>Wes Bos</h2>
+
+		<p>I have to admit that Wes Bos' course on React was a big inspiration for me in terms of CSS writing.  He probably wouldn't have expected that, but it is true!  He doesn't discuss CSS at all during the course (except to show how to do animations in React), but the application at the end looks really really good.  He does it all in one "styles.css" file, and I believe he uses Stylus (CSS pre-processor) to write it.  It just showed me what you can do just writing CSS on your own.</p>
+
+		<p>For the record, Wes Bos has some really great stuff.  That's where I learned about Emmet too, I've been going through his Sublime power users course.  He makes learning to code and learning new tools fun!  I hope to eventually work through all his courses.</p>
+
+		<p>Well, that's it for today.  Go forth and write some CSS!</p>
+
+	</div>
+
 	</div>
 	
 </div>
